# datum-sponza

./: CMakeLists.txt  README.md
data/: sponza.mtl  sponza.txt
data/textures/: background_roughness.tga  chain_texture_metallic.tga  chain_texture_roughness.tga  lion_roughness.tga  sponza_arch_roughness.tga  sponza_bricks_a_roughness.tga  sponza_ceiling_roughness.tga  sponza_column_a_roughness.tga  sponza_column_b_roughness.tga  sponza_column_c_roughness.tga  sponza_curtain_metallic.tga  sponza_curtain_roughness.tga  sponza_details_metallic.tga  sponza_details_roughness.tga  sponza_fabric_roughness.tga  sponza_flagpole_roughness.tga  sponza_floor_roughness.tga  sponza_roof_roughness.tga  sponza_thorn_roughness.tga  vase_roughness.tga  vasehanging_roughness.tga  vaseplant_roughness.tga  vaseround_roughness.tga
src/: CMakeLists.txt  datumsponza-win32.cpp  datumsponza-xcb.cpp  datumsponza.cpp  datumsponza.h  envmapgen.cpp  fallback.h  platform.cpp  platform.h
